exports[`test Click on Story to showTasksForStoryId 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="story_card"
  href="#"
  listItem={false}
  onClick={[Function]}>
  test
  <OpenIcon
    story_id="1" />
</ListGroupItem>
`;

exports[`test Click on Story to showTasksForStoryId 2`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="story_card"
  href="#"
  listItem={false}
  onClick={[Function]}>
  test2
  <OpenIcon
    story_id="2" />
</ListGroupItem>
`;

exports[`test Render Html with Name 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="story_card"
  href="#"
  listItem={false}
  onClick={[Function]}>
  test
  <OpenIcon
    story_id="1" />
</ListGroupItem>
`;
